Add in dose model, extract Dose ID from URL

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ DrugRegimen/DrugTracker/__pycache__/models.cpython-36.pyc
 DrugRegimen/DrugTracker/__pycache__/views.cpython-36.pyc
 DrugRegimen/DrugTracker/__pycache__/models.cpython-36.pyc
 DrugRegimen/DrugTracker/__pycache__/views.cpython-36.pyc
+DrugRegimen/uca-url.eps
+DrugRegimen/uca-url.eps
+DrugRegimen/DrugTracker/__pycache__/views.cpython-36.pyc
+DrugRegimen/DrugTracker/__pycache__/urls.cpython-36.pyc
+DrugRegimen/DrugTracker/__pycache__/models.cpython-36.pyc
+DrugRegimen/DrugRegimen/__pycache__/urls.cpython-36.pyc
